// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render-to-stream client hydration deferred page 1`] = `
"Tramvai 🥳
Main
Second
Deferred
Deferred State
Non-deferred
Deferred Foo
Deferred Bar
Deferred Baz
Deferred Page
Response: ok
Response: ok
Error: Failed Fast Deferred
Error: Failed Deferred
XSS safe: </script><script>alert("xss")</script>
Error: Deferred Action Abort
this Footer in render-to-stream"
`;

exports[`render-to-stream server-side rendering deferred page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      Deferred Page
      
      Loading long...
      
      
        Response:
        ok
      
      
      
        Error:
        Failed Fast Deferred
      
      
      Loading long error...
      
      
        XSS safe:
        &lt;/script&gt;&lt;script&gt;alert(&quot;xss&quot;)&lt;/script&gt;
      
      
      Loading aborted error...
      
      this Footer in render-to-stream
      
      
      
      
      
      Response: ok
      
      
        
          Error:
          Failed Deferred
        
      
      
      
      
    "
`;

exports[`render-to-stream server-side rendering main page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      
        Main Page
        Child Component
        Error fallback
      
      
        this Footer in render-to-stream
        This is modal for index page!
      
      
    "
`;

exports[`render-to-stream server-side rendering non-deferred page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      Loading...
      this Footer in render-to-stream
      
    "
`;
